# opk-roboticky-vysavac

./: .gitignore  CMakeLists.txt  README.md  flake.nix  keep_clean_result.txt  main.cpp  package-lock.json  package.xml  zadanie1-Kusgir.code-workspace
.github/workflows/: autograde.yml
include/: Canvas.h
include/controls/: Controls.hpp
include/environment/: Canvas.h  Environment.h  Lidar.h
include/game/: Collider.h  Game.h  GameException.h  GameNode.h  Waste.h
include/parser/: Parser.h
include/robot/: Robot.h  RobotNodes.h  lidar.h
include/types/: Geometry.h
include/visualization/: OpenCvSceneRenderer.h  SceneRenderer.h
include/web/: WebServer.h
msg/: GameState.msg  RobotState.msg
resources/: config.yml  environment.yaml  robot.rviz  test-environment.yaml
src/: CMakeLists.txt  Canvas.cpp  Enviroment.cpp  Environment.cpp  Game.cpp  GameNode.cpp  Lidar.cpp  OpenCvSceneRenderer.cpp  Robot.cpp  RobotNodes.cpp  Waste.cpp  WebServer.cpp
src/controls/: Controls.cpp
src/parser/: Parser.cpp
src/tests/: test_environment.cpp  test_lidar.cpp
tests/: CMakeLists.txt  test_env.cpp  test_environment.cpp  test_game.cpp  test_lid.cpp  test_lidar.cpp  test_robot.cpp
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.svelte  styles.css
