<?xml version="1.0"?>
<package format="3">
  <name>robot_assignment</name>
  <version>0.1.0</version>
  <description>Robot vacuum simulator with ROS 2 interfaces.</description>
  <maintainer email="mato@example.com">mato</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>gtest</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
